src/objects/Apttus_Config2__FieldExpression__c.object
<CustomObject>
    <description>Represents a field expression</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Represents whether the field expression is active. If unchecked, field expression is not evaluated at runtime.</description>
        <inlineHelpText>Represents whether the field expression is active. If unchecked, field expression is not evaluated at runtime.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConditionExpression__c</fullName>
        <description>Expression used to determine qualifying line items for rollup.</description>
        <inlineHelpText>Expression used to determine qualifying line items for rollup.</inlineHelpText>
        <label>Match Expression</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConditionScope__c</fullName>
        <description>Scope which determines when the rollup will be attached to the configuration.</description>
        <inlineHelpText>Scope which determines when the rollup will be attached to the configuration.</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Group</fullName>
                </value>
                <value>
                    <fullName>Header Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EvaluationContext__c</fullName>
        <description>Gives expression evaluation context</description>
        <inlineHelpText>Gives expression evaluation context</inlineHelpText>
        <label>Evaluation Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Constraint Rule Action</fullName>
                </value>
                <value>
                    <fullName>Record Update</fullName>
                </value>
                <value>
                    <fullName>Default Quantity</fullName>
                </value>
                <value>
                    <fullName>Rollup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpressionType__c</fullName>
        <description>Expression type</description>
        <inlineHelpText>Expression type</inlineHelpText>
        <label>Expression Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Update</fullName>
                </value>
                <value>
                    <fullName>Rollup</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Expression__c</fullName>
        <description>Represents the field expression for field updates and rollups</description>
        <inlineHelpText>Represents the field expression for field updates and rollups</inlineHelpText>
        <label>Value Expression</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupByField__c</fullName>
        <description>Represents rollup field expression aggregation field name</description>
        <inlineHelpText>Represents rollup field expression aggregation field name</inlineHelpText>
        <label>Group By Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Operation__c</fullName>
        <description>Rollup operation applied to the value expression of the line items returned by the match expression.</description>
        <inlineHelpText>Rollup operation applied to the value expression of the line items returned by the match expression.</inlineHelpText>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUM</fullName>
                </value>
                <value>
                    <fullName>MIN</fullName>
                </value>
                <value>
                    <fullName>MAX</fullName>
                </value>
                <value>
                    <fullName>AVG</fullName>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentField__c</fullName>
        <description>Field to associate line item rollup record to scope.</description>
        <inlineHelpText>Field to associate line item rollup record to scope.</inlineHelpText>
        <label>Parent Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Field Expressions</relationshipLabel>
        <relationshipName>FieldExpressions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Field Expressions (Product)</relationshipLabel>
        <relationshipName>Field_Expressions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceObject__c</fullName>
        <description>Represents the source object for expression.</description>
        <inlineHelpText>Represents the source object for expression.</inlineHelpText>
        <label>Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UpdateField__c</fullName>
        <description>Represents the target field name which gets value at runtime from field update or rollup expressions.</description>
        <inlineHelpText>Represents the target field name which gets value at runtime from field update or rollup expressions.</inlineHelpText>
        <label>Update Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UpdateObject__c</fullName>
        <description>Represents update field name containing object which gets value at runtime from field update or rollup expressions</description>
        <inlineHelpText>Represents update field name containing object which gets value at runtime from field update or rollup expressions</inlineHelpText>
        <label>Update Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Field Expression</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Apttus_Config2__ExpressionType__c</columns>
        <columns>Apttus_Config2__EvaluationContext__c</columns>
        <columns>Apttus_Config2__UpdateField__c</columns>
        <columns>Apttus_Config2__UpdateObject__c</columns>
        <columns>Apttus_Config2__GroupByField__c</columns>
        <columns>Apttus_Config2__Expression__c</columns>
        <columns>Apttus_Config2__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field Expression Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Expressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>